k8s-yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: <ENV_PREFIX>-yam-realtoken
  name: <ENV_PREFIX>-yam-realtoken
spec:
  selector:
    matchLabels:
      app: <ENV_PREFIX>-yam-realtoken
  template:
    metadata:
      labels:
        app: <ENV_PREFIX>-yam-realtoken
    spec:
      containers:
      - image: <IMAGE>
        imagePullPolicy: IfNotPresent
        name: <ENV_PREFIX>-yam-realtoken
        ports:
        - containerPort: 3000
          protocol: TCP
